[gd_scene load_steps=3 format=3 uid="uid://c6674nqocrqwt"]

[ext_resource type="Texture2D" uid="uid://dl67ji1j5c0k8" path="res://icon.svg" id="1_hi7nk"]
[ext_resource type="Script" path="res://game/tabs/town/buildings/building.gd" id="2_ptwb8"]

[node name="Building" type="TextureButton"]
offset_right = 35.0
offset_bottom = 35.0
texture_normal = ExtResource("1_hi7nk")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_ptwb8")

[node name="PopupPanel" type="PopupPanel" parent="."]
size = Vector2i(9, 31)

[node name="Label" type="Label" parent="PopupPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 5.0
offset_bottom = 27.0
size_flags_horizontal = 4

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
